--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SearchActivity">
+        <activity android:name=".activity.MapsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,7 +41,7 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".activity.InfoActivity" />
-        <activity android:name=".activity.MapsActivity"></activity>
+        <activity android:name=".activity.SearchActivity"></activity>
     </application>
 
 </manifest>
